Added Database Models

--- a/FloraCapstone2nd/appsettings.json
+++ b/FloraCapstone2nd/appsettings.json
@@ -7,7 +7,7 @@
   },
   //Change values of user and password according to your Database specs
   "ConnectionString": {
-    "DefaultConnection": "server=localhost;port=3306;database=floradb;user=root;password=root1234"
+    "DefaultConnection": "server=localhost;database=floradb;user=root;password=root1234"
   },
   "AllowedHosts": "*"
 
