--- a/FloraCapstone2nd/FloraCapstone2nd.csproj
+++ b/FloraCapstone2nd/FloraCapstone2nd.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 	
   <ItemGroup>
+    <PackageReference Include="FontAwesome" Version="4.7.0" />
     <PackageReference Include="microsoft.entityframeworkcore.tools" Version="6.0.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -14,6 +15,12 @@
     <PackageReference Include="MySql.Data" Version="8.0.29" />
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.22" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
+  </ItemGroup>
+	
+  <ItemGroup>
+    <Folder Include="Pages\Member\" />
+    <Folder Include="Pages\Expert\" />
+    <Folder Include="Pages\Non-member\" />
   </ItemGroup>
 
 </Project>
