--- a/FloraCapstone2nd/FloraCapstone2nd.csproj
+++ b/FloraCapstone2nd/FloraCapstone2nd.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 	
   <ItemGroup>
+    <PackageReference Include="bootstrap" Version="5.1.3" />
     <PackageReference Include="FontAwesome" Version="4.7.0" />
     <PackageReference Include="microsoft.entityframeworkcore.tools" Version="6.0.3">
       <PrivateAssets>all</PrivateAssets>
@@ -20,7 +21,6 @@
   <ItemGroup>
     <Folder Include="Pages\Member\" />
     <Folder Include="Pages\Expert\" />
-    <Folder Include="Pages\Non-member\" />
   </ItemGroup>
 
 </Project>
