--- a/FloraCapstone2nd/FloraCapstone2nd.csproj
+++ b/FloraCapstone2nd/FloraCapstone2nd.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 	
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.3" />
     <PackageReference Include="microsoft.entityframeworkcore.tools" Version="6.0.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
