--- a/FloraCapstone2nd/FloraCapstone2nd.csproj
+++ b/FloraCapstone2nd/FloraCapstone2nd.csproj
@@ -15,5 +15,9 @@
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.22" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
   </ItemGroup>
+	
+  <ItemGroup>
+    <Folder Include="Pages\Diagnose\" />
+  </ItemGroup>
 
 </Project>
